# Labyrinth_Refactor

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  improvements.txt  scene_components.txt
.clangd/index/: Labyrinth.cpp.A354A278FA1B1DA4.idx  boundary_scene.cpp.EB07B8950F81C0A9.idx  boundary_scene.h.C82B739BFD578F0D.idx  camera.cpp.7A01B93D92B73FBD.idx  camera.h.9B649F270978CFA0.idx  character.cpp.B373301FC2FB2774.idx  character.h.03713365728BC406.idx  character_config.h.B5E27B81E001D710.idx  character_state.h.A47CCB51F563D09D.idx  cleanup.h.755A9AD80EC01E09.idx  doug.h.6A7B5D0F55436297.idx  easy_sdl.cpp.7ABF503525A94CBB.idx  easy_sdl.h.6B491354282B58C1.idx  following_state.cpp.53B35426252970EF.idx  following_state.h.899CEEBB99342DA0.idx  game.cpp.63B66EC023664181.idx  game.h.69B3C69FD841B391.idx  game_component.h.6A1AFD21AEF66FF0.idx  game_component_factory.cpp.4F3D79DE8AD944AC.idx  game_component_factory.h.F0CEB446915E61B1.idx  (+41 more)
inc/: WalkingState.h  background.h  boundary_scene.h  camera.h  character.h  character_config.h  character_state.h  character_struct.h  character_struct.h~  cleanup.h  conversation.h  doug.h  doug.h~  following_state.h  game.h  game_component.h  game_component_factory.h  game_renderer.h  game_setup.h~  game_state.h  glyph.h  grass.h  hello_world.h  input_event.h  input_handler.h  interaction.h  lunius.h  lunius.h~  origin.h  origin_clone.h  panel.h  recruit_text_box.h  recruitable_state_decorator.h  recruiting_state.h  render_component.h  scene.h  sceneJunction.h  scene_config.h  scene_state.h  scene_states.h  (+10 more)
src/inc/: camera.h  (+29 more)
(+50 files in other folders)
